# github-language-stats

./: Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  entrypoint.sh  example.env  pyproject.toml  requirements.txt  setup.py
docs/: errors.md  install.md  params.md  themes.md
src/: constants.py  container.py  exceptions.py  main.py  settings.py
src/api/: routers.py
src/database/: caching.py  redis.py
src/github/: api.py  repos.py  requests.py
src/static/: index.html  script.js
src/svg/: __init__.py  card.py  css.py  elements.py  language.py  themes.py  utils.py
src/svg/diagrams/: bar_chart.py  list.py
tests/: test_elements.py  test_main.py
