[tool.poetry]
name = "github-language-stats"
version = "0.1.0"
description = ""
authors = ["Ben Puls <61308126+byBenPuls@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
redis = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
