[tool.poetry]
name = "github-language-stats"
version = "0.1.0"
description = ""
authors = ["Ben Puls <61308126+byBenPuls@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
uvicorn = "^0.30.3"
python = "^3.12"
fastapi = "^0.111.1"
redis = "^5.0.7"
pydantic-settings = "^2.3.4"
punq = "^0.7.0"
ruff = "^0.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
